crates/es-fluent-derive/tests/ui/struct_validation_failure.stderr
error: Field 'value' error: Cannot use #[fluent(arg = "...")] on a skipped field
 --> tests/ui/struct_validation_failure.rs:6:5
  |
6 |     value: i32,
  |     ^^^^^
